@@ -99,6 +99,7 @@ Bug Fixes
   the behavior of a non-distributed request since it only returned
   the id,score fields instead of all fields in addition to score. (yonik)
 
+* SOLR-1601: Schema browser does not indicate presence of charFilter. (koji)
 
 Other Changes
 ----------------------
